rPing: add device category health chart and adjust styles for improved layout and responsiveness

--- a/static/index.html
+++ b/static/index.html
@@ -73,6 +73,12 @@
                         <canvas id="devicePieChart"></canvas>
                     </div>
                 </div>
+                <div class="chart-card">
+                    <h2 class="chart-title">Device Category Health</h2>
+                    <div class="chart-container">
+                        <canvas id="categoryHealthChart"></canvas>
+                    </div>
+                </div>
             </section>
 
             <section class="log-export-section">
