--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,7 @@
                 <a href="log_view.html" class="nav-link" id="logViewButton"><i class="fas fa-file-alt"></i> Live Logs</a>
                 <a href="failed_logs.html" class="nav-link" id="failedLogsButton"><i class="fas fa-exclamation-triangle"></i> Failed Logs</a>
                 <a href="manage-devices.html" class="nav-link" id="manageDevicesButton"><i class="fas fa-server"></i> Manage Devices</a>
+                <a href="email_config.html" class="nav-link" id="emailConfigButton"><i class="fas fa-envelope"></i> Email Alerts</a>
                 <button onclick="resetPassword()" class="nav-button"><i class="fas fa-key fa-fw icon-space"></i> Reset Password</button>
                 <button onclick="logout()" class="nav-button logout-button"><i class="fas fa-sign-out-alt"></i> Logout</button>
             </nav>
