rPing: Enhance navigation by adding icons for Dashboard, Live Logs, Failed Logs, and Email Alerts

--- a/static/email_config.html
+++ b/static/email_config.html
@@ -186,9 +186,9 @@
                 </a>
             </div>
             <nav class="navigation">
-                <a href="/static/index.html" class="nav-link">Dashboard</a>
-                <a href="/static/log_view.html" class="nav-link">Live Logs</a>
-                <a href="/static/failed_logs.html" class="nav-link">Failed Logs</a>
+                <a href="/static/index.html" class="nav-link"><i class="fas fa-home"></i> Dashboard</a>
+                <a href="/static/log_view.html" class="nav-link"><i class="fas fa-file-alt"></i> Live Logs</a>
+                <a href="/static/failed_logs.html" class="nav-link"><i class="fas fa-exclamation-triangle"></i> Failed Logs</a>
             </nav>
             <div class="dark-mode-toggle" onclick="toggleDarkMode()">
                 <i class="fas fa-moon"></i>
