--- a/static/manage-devices.html
+++ b/static/manage-devices.html
@@ -20,7 +20,7 @@
             </div>
             <nav class="navigation">
                 <!-- Navigation links, consistent with index.html -->
-                <a href="index.html" class="nav-link"><i class="fas fa-tachometer-alt"></i> Dashboard</a> <!-- Added dashboard icon -->
+                <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Dashboard</a> <!-- Added dashboard icon -->
                 <a href="log_view.html" class="nav-link"><i class="fas fa-file-alt"></i> Live Logs</a>
                 <a href="failed_logs.html" class="nav-link"><i class="fas fa-exclamation-triangle"></i> Failed Logs</a>
                  <a href="manage-devices.html" class="nav-link active" id="manageDevicesButton"><i class="fas fa-server"></i> Manage Devices</a>
