--- a/static/log_view.html
+++ b/static/log_view.html
@@ -21,9 +21,9 @@
                  </a>
             </div>
         <nav class="navigation">
-            <a href="/static/index.html" class="nav-link">Dashboard</a>
-            <a href="/static/failed_logs.html" class="nav-link">Failed Logs</a>
-            <a href="/static/email_config.html" class="nav-link">Email Alerts</a>
+            <a href="/static/index.html" class="nav-link"><i class="fas fa-home"></i> Dashboard</a>
+            <a href="/static/failed_logs.html" class="nav-link"><i class="fas fa-exclamation-triangle"></i> Failed Logs</a>
+            <a href="/static/email_config.html" class="nav-link"><i class="fas fa-envelope"></i> Email Alerts</a>
         </nav>
         <div class="dark-mode-toggle" onclick="toggleDarkMode()">
             <i class="fas fa-moon"></i> <!- - Initial Icon (Moon for Light Mode Default) - ->
