--- a/static/index.html
+++ b/static/index.html
@@ -29,11 +29,29 @@
                 <div id="updateIndicator" class="update-indicator">
                     <i class="fas fa-circle-notch fa-spin"></i> Updating...
                 </div>
-                <a href="log_view.html" class="nav-link" id="logViewButton"><i class="fas fa-file-alt"></i> Live Logs</a>
-                <a href="failed_logs.html" class="nav-link" id="failedLogsButton"><i class="fas fa-exclamation-triangle"></i> Failed Logs</a>
+                <a href="index.html" class="nav-link active">
+                    <i class="fas fa-home"></i> Dashboard
+                </a>
+                <div class="nav-dropdown">
+                    <button class="nav-dropdown-btn">
+                        <i class="fas fa-file-alt"></i> Logs
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="nav-dropdown-content">
+                        <a href="log_view.html" class="nav-dropdown-item">
+                            <i class="fas fa-file-alt"></i> Live Logs
+                        </a>
+                        <a href="failed_logs.html" class="nav-dropdown-item">
+                            <i class="fas fa-exclamation-triangle"></i> Failed Logs
+                        </a>
+                    </div>
+                </div>
                 <a href="manage-devices.html" class="nav-link" id="manageDevicesButton"><i class="fas fa-server"></i> Manage Devices</a>
                 <a href="email_config.html" class="nav-link" id="emailConfigButton"><i class="fas fa-envelope"></i> Email Alerts</a>
-                <button onclick="resetPassword()" class="nav-button"><i class="fas fa-key fa-fw icon-space"></i> Reset Password</button>
+                <div class="user-profile">
+                    <img id="userAvatar" src="https://ui-avatars.com/api/?name=admin&background=random&size=128&bold=true&color=fff" alt="User Avatar" class="avatar">
+                    <span id="username" class="username"></span>
+                </div>
                 <button onclick="logout()" class="nav-button logout-button"><i class="fas fa-sign-out-alt"></i> Logout</button>
             </nav>
             <div class="dark-mode-toggle" onclick="toggleDarkMode()">
