--- a/static/login.html
+++ b/static/login.html
@@ -36,13 +36,26 @@
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" id="password" required autocomplete="current-password">
+                        <div class="password-input-container">
+                            <input type="password" id="password" required autocomplete="current-password">
+                            <button type="button" class="password-toggle" aria-label="Toggle password visibility">
+                                <i class="fas fa-eye"></i>
+                            </button>
+                        </div>
                     </div>
 
-                    <button type="submit" class="button primary-button">Login</button>
+                    <div class="remember-me">
+                        <input type="checkbox" id="rememberMe">
+                        <label for="rememberMe">Remember me</label>
+                    </div>
+
+                    <button type="submit" class="button primary-button">
+                        <span class="button-text">Login</span>
+                        <div class="button-loader"></div>
+                    </button>
 
                     <div class="forgot-password-container">
-                         <a href="#" id="forgotPasswordLink" class="forgot-password-link">Forgot Password?</a>
+                        <a href="#" id="forgotPasswordLink" class="forgot-password-link">Forgot Password?</a>
                     </div>
                 </form>
 
