--- a/static/admin-dashboard.html
+++ b/static/admin-dashboard.html
@@ -152,28 +152,38 @@
     </div>
 
     <!-- Add User Modal -->
-    <div class="modal" id="addUserModal">
+    <div id="addUserModal" class="modal">
         <div class="modal-content">
-            <h2>Add New User</h2>
+            <div class="modal-header">
+                <h2>Add New User</h2>
+                <button class="close-btn" id="cancelBtn">&times;</button>
+            </div>
             <form id="addUserForm">
                 <div class="form-group">
-                    <label>Username</label>
-                    <input type="text" id="username" required>
+                    <label for="newUsername">Username</label>
+                    <input type="text" id="newUsername" required>
                 </div>
                 <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" id="password" required>
+                    <label for="newPassword">Password</label>
+                    <div class="password-input">
+                        <input type="password" id="newPassword" required>
+                        <button type="button" class="password-toggle">
+                            <i class="fas fa-eye"></i>
+                        </button>
+                    </div>
+                    <div class="password-strength">
+                        <div class="meter-bar"></div>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label>Role</label>
-                    <select id="role" required>
+                    <label for="newUserRole">Role</label>
+                    <select id="newUserRole" required>
                         <option value="user">User</option>
                         <option value="admin">Admin</option>
                     </select>
                 </div>
-                <div class="modal-buttons">
-                    <button type="button" class="btn-secondary" id="cancelBtn">Cancel</button>
-                    <button type="submit" class="btn-primary">Add User</button>
+                <div class="form-actions">
+                    <button type="submit" class="primary-button">Add User</button>
                 </div>
             </form>
         </div>
