rPing: add navigation links for managing devices and email alerts in admin dashboard
Signed-off-by: KARTHIK LAL dev@karthiklal.in

--- a/static/admin-dashboard.html
+++ b/static/admin-dashboard.html
@@ -27,6 +27,8 @@
                 <a href="admin-dashboard.html" class="nav-link active">
                     <i class="fas fa-user-shield"></i> Admin Panel
                 </a>
+                <a href="manage-devices.html" class="nav-link" id="manageDevicesButton"><i class="fas fa-server"></i> Manage Devices</a>
+                  <a href="email_config.html" class="nav-link" id="emailConfigButton"><i class="fas fa-envelope"></i> Email Alerts</a>
                 <div class="nav-dropdown">
                     <button class="nav-dropdown-btn">
                         <i class="fas fa-file-alt"></i> Logs
